main project shell and routing created.

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,17 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Hook App</title>
-    <meta name="description" content="Hook Dating App"/>
-    <meta name="keywords" content="Gay, Trans, Dating App"/>
+    <meta name="description" content="Hook Dating App" />
+    <meta name="keywords" content="Gay, Trans, Dating App" />
 
-    <link rel="icon" type="image/png" href="images/icon.png" />
-    <link rel="stylesheet" type="text/css" href="css/base.css" />
+    {% load static %}
+    <link rel="icon" type="image/png" href="{% static 'images/icon.png'%}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css'%}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/profile_grid.css'%}" />
   </head>
   <body>
-
-    {% block content %}
-    
-    {% endblock %}
-
+    <header>
+      <div id="header_container">
+        <div id="site_logo_container">
+          <img
+            src="{% static '/images/icon.png'%}"
+            alt="Hook App Logo"
+            id="hook_logo"
+          />
+          <img src="{% static '/images/hook.png'%}" alt="Hook" id="hook_text" />
+        </div>
+        <nav>
+          <a href="{% url 'home' %}" 
+            ><svg
+              width="22"
+              height="20"
+              viewBox="0 0 22 20"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M19.04 4.82006L13.28 0.79006C11.71 -0.30994 9.29999 -0.24994 7.78999 0.92006L2.77999 4.83006C1.77999 5.61006 0.98999 7.21006 0.98999 8.47006V15.3701C0.98999 17.9201 3.05999 20.0001 5.60999 20.0001H16.39C18.94 20.0001 21.01 17.9301 21.01 15.3801V8.60006C21.01 7.25006 20.14 5.59006 19.04 4.82006ZM11.75 16.0001C11.75 16.4101 11.41 16.7501 11 16.7501C10.59 16.7501 10.25 16.4101 10.25 16.0001V13.0001C10.25 12.5901 10.59 12.2501 11 12.2501C11.41 12.2501 11.75 12.5901 11.75 13.0001V16.0001Z"
+                fill="#E6256F"
+              /></svg
+          ></a>
+          <svg
+            width="22"
+            height="22"
+            viewBox="0 0 22 22"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M11 0.5C8.9233 0.5 6.89323 1.11581 5.16652 2.26957C3.4398 3.42332 2.09399 5.0632 1.29927 6.98182C0.504549 8.90045 0.296614 11.0116 0.701759 13.0484C1.1069 15.0852 2.10693 16.9562 3.57538 18.4246C5.04383 19.8931 6.91476 20.8931 8.95156 21.2982C10.9884 21.7034 13.0996 21.4955 15.0182 20.7007C16.9368 19.906 18.5767 18.5602 19.7304 16.8335C20.8842 15.1068 21.5 13.0767 21.5 11C21.5 8.21523 20.3938 5.54451 18.4246 3.57538C16.4555 1.60625 13.7848 0.5 11 0.5ZM11 20C9.21997 20 7.47992 19.4722 5.99987 18.4832C4.51983 17.4943 3.36628 16.0887 2.68509 14.4442C2.0039 12.7996 1.82567 10.99 2.17294 9.24419C2.5202 7.49836 3.37737 5.89471 4.63604 4.63604C5.89472 3.37737 7.49836 2.5202 9.24419 2.17293C10.99 1.82567 12.7996 2.0039 14.4442 2.68508C16.0887 3.36627 17.4943 4.51983 18.4832 5.99987C19.4722 7.47991 20 9.21997 20 11C20 13.3869 19.0518 15.6761 17.364 17.364C15.6761 19.0518 13.387 20 11 20ZM15.44 5.555L9.0725 8.75C8.92866 8.82605 8.81105 8.94366 8.735 9.0875L5.555 15.44C5.49892 15.5545 5.47294 15.6813 5.4795 15.8086C5.48606 15.9359 5.52495 16.0594 5.5925 16.1675C5.66006 16.2756 5.75404 16.3647 5.86558 16.4263C5.97713 16.488 6.10255 16.5203 6.23 16.52C6.34428 16.5205 6.45716 16.4948 6.56001 16.445L12.9275 13.25C13.0713 13.174 13.189 13.0563 13.265 12.9125L16.445 6.545C16.5144 6.40438 16.538 6.24555 16.5124 6.09084C16.4868 5.93613 16.4134 5.79332 16.3025 5.6825C16.19 5.57401 16.0463 5.50341 15.8917 5.48055C15.737 5.45769 15.5791 5.48372 15.44 5.555ZM12.035 12.035L7.9025 14.0975L9.965 9.965L14.0975 7.9025L12.035 12.035Z"
+              fill="#313A45"
+            />
+          </svg>
+          <svg
+            width="18"
+            height="19"
+            viewBox="0 0 18 19"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M9.01999 18.53C6.68999 18.53 4.35999 18.16 2.14999 17.42C1.30999 17.13 0.669991 16.54 0.389991 15.77C0.0999912 15 0.199991 14.15 0.659991 13.39L1.80999 11.48C2.04999 11.08 2.26999 10.28 2.26999 9.81004V6.92004C2.26999 3.20004 5.29999 0.170044 9.01999 0.170044C12.74 0.170044 15.77 3.20004 15.77 6.92004V9.81004C15.77 10.27 15.99 11.08 16.23 11.49L17.37 13.39C17.8 14.11 17.88 14.98 17.59 15.77C17.3 16.56 16.67 17.16 15.88 17.42C13.68 18.16 11.35 18.53 9.01999 18.53ZM9.01999 1.67004C6.12999 1.67004 3.76999 4.02004 3.76999 6.92004V9.81004C3.76999 10.54 3.46999 11.62 3.09999 12.25L1.94999 14.16C1.72999 14.53 1.66999 14.92 1.79999 15.25C1.91999 15.59 2.21999 15.85 2.62999 15.99C6.80999 17.39 11.24 17.39 15.42 15.99C15.78 15.87 16.06 15.6 16.19 15.24C16.32 14.88 16.29 14.49 16.09 14.16L14.94 12.25C14.56 11.6 14.27 10.53 14.27 9.80004V6.92004C14.27 4.02004 11.92 1.67004 9.01999 1.67004Z"
+              fill="#313A45"
+            />
+          </svg>
+          {% if user.is_authenticated %}
+          <a href="{% url 'logout' %}">Logout</a>
+          {% else %}
+          <a href="{% url 'login' %}">Login</a>
+          {% comment %}<a href="{% url 'register' %}">Register</a>{%endcomment%}
+          {% endif %}
+        </nav>
+      </div>
+    </header>
+    <main>
+    {% block content %} {% endblock %}
+    </main>
   </body>
 </html>
