User authenitcation changes have been added. Login and Logout fully functioning as well as creating and changing users in the admin panel.

--- a/profile_grid/templates/profile_grid/grid.html
+++ b/profile_grid/templates/profile_grid/grid.html
@@ -3,7 +3,12 @@
 
 {% block content %}
     <div id="message_container">
-        
+        <div id="mode_container">
+            <h1>Dating</h1>
+        </div>
+        <div id="matches_container">
+            <h1>Matches</h1>
+        </div>
     </div>
     <div id="profile_container">
         
