--- a/static/css/profile_grid.css
+++ b/static/css/profile_grid.css
@@ -1,13 +1,21 @@
 #message_container {
     background-color: #FFFFFF;
-    height: 82rem;
-    width: 35rem;
+    padding: 1.5rem;
+    height: 85rem;
+    width: 30%;
     border-radius: 2.4rem;
 }
 
 #profile_container {
     background-color: #FFFFFF;
-    height: 82rem;
-    width: 83rem;
+    height: 85rem;
+    width: 67.5%;
     border-radius: 2.4rem;
+}
+
+#mode_container {
+    background-color: #F0F0F0;
+    height: 7.5rem;
+    /*margin: 1.5rem 1.5rem;*/
+    padding: 1.5rem;
 }
