--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Hook App - Login{% endblock %}
+
 {% block content %}
     {% if form.errors %}
         <p>Your username or password is incorrect. Please try again.</p>
