--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Hook App - Register{% endblock %}
+
 {% block content %}
 <form method="post">
     {% csrf_token %}
