Completed django setup and app structure. Moving on to tweaking HTML, CSS, and adding JS.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -48,6 +48,7 @@ header {
 nav {
     display: flex;
     align-items: center;
+    overflow: hidden;
 }
 
 main {
@@ -67,6 +68,11 @@ h2 {
     line-height: 2rem;
     font-size: 1.8rem;
     font-weight: 500;
+}
+
+a {
+    color: #E6256F;
+    text-decoration: none;
 }
 
 #header_container {
@@ -104,3 +110,50 @@ h2 {
     width: 4rem;
     border-radius: 46px;
 }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropbtn {
+    border: none;
+    background-color: transparent;
+    padding-bottom: 1rem;
+    margin-left: 0.25rem;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    padding: 12px 16px;
+    margin-left: 0;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #E6256F;
+    color: #FFF
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
