--- a/profile_grid/templates/profile_grid/grid.html
+++ b/profile_grid/templates/profile_grid/grid.html
@@ -37,7 +37,9 @@
     <div id="search_bar">
       <input type="text" placeholder="Search" id="search_input" />
     </div>
-    <div id="grid_layout"></div>
+    <div id="grid_layout">
+        
+    </div>
   </div>
   <br />
   <hr />
