Edited CSS files for register and login forms.

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,29 +4,34 @@
 {% block title %}Hook App - Login{% endblock %}
 
 {% block content %}
-    {% if form.errors %}
-        <p>Your username or password is incorrect. Please try again.</p>
-    {% endif %}
-
-    {% if next %}
-        {% if user.is_authenticated %}
-            <p>You do not have permission to access this page.</p>
-        {% else %}
-            <p>Please login to access this page.</p>
+    <div id="login_container">
+        <div id="errors">
+        {% if form.errors %}
+            <p>Your username or password is incorrect. Please try again.</p>
+            <br/>
         {% endif %}
-    {% endif %}
 
-    <form action="{% url 'login' %}" method="POST">
-        {% csrf_token %}
-        
-        {{ form.username.label_tag }}
-        {{ form.username}}
+        {% if next %}
+            {% if user.is_authenticated %}
+                <p>You do not have permission to access this page.</p>
+            {% else %}
+                <p>Please login to access this page.</p>
+            {% endif %}
+        {% endif %}
+        </div>
 
-        {{ form.password.label_tag }}
-        {{ form.password }}
-
-        <input type="submit" value="Login" />
-        <input type="hidden" name="next" value="{{next}}" />
-    </form>
+        <form action="{% url 'login' %}" method="POST" id="login_form">
+            {% csrf_token %}
+            
+            {{ form.username.label_tag }}
+            {{ form.username }}
+            <br/>
+            {{ form.password.label_tag }}
+            {{ form.password }}
+            <br/>
+            <input type="submit" value="Login" id="login_button"/>
+            <input type="hidden" name="next" value="{{next}}" />
+        </form>
+    </div>  
 {% endblock %}
 
