--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,16 @@
       type="text/css"
       href="{% static 'css/profile_grid.css'%}"
     />
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="{% static 'css/login.css'%}"
+    />
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="{% static 'css/register.css'%}"
+    />
   </head>
   <body>
     <header>
