--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -4,9 +4,9 @@
 {% block title %}Hook App - Register{% endblock %}
 
 {% block content %}
-<form method="post">
+<form method="post" id="register_form">
     {% csrf_token %}
-    {{form.as_div}}
-    <input type="submit" value="Register" />
+    {{ form }}
+    <input type="submit" value="Register" id="register_button" />
 </form>
 {% endblock %}
