--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,8 +1,23 @@
+#register_container {
+    margin: auto;
+    background-color: #FFFFFF;
+    height: 85rem;
+    width: 67.5%;
+    border-radius: 2.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #register_form {
     display: flex;
     flex-direction: column;
     margin: auto;
-    width: 25rem;
+    width: 30rem;
+}
+
+#register_form > input {
+    margin-bottom: 1rem;
 }
 
 #id_email, #id_first_name, #id_last_name, #id_date_of_birth, #id_ethnicity, #id_gender_identity, #id_sexual_orientation,
