--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -4,9 +4,11 @@
 {% block title %}Hook App - Register{% endblock %}
 
 {% block content %}
-<form method="post" id="register_form">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Register" id="register_button" />
-</form>
+<div id="register_container">
+    <form method="post" id="register_form" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Register" id="register_button" />
+    </form>
+</div>
 {% endblock %}
